--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./src:/var/www/html:delegated
+      - ./src/Emotion-Tracker:/var/www/html:delegated
     depends_on:
       - php
       - redis
@@ -30,6 +30,8 @@ services:
     tty: true
     ports:
       - "3306:3306"
+    volumes:
+      - ./mysql:/var/lib/mysql
     environment:
       MYSQL_DATABASE: homestead
       MYSQL_USER: homestead
@@ -50,7 +52,8 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - ./src:/var/www/html:delegated
+      - ./src/Emotion-Tracker:/var/www/html:delegated
+      - ./php/php.ini:/usr/local/etc/php/conf.d/php.ini
     networks:
       - laravel
 
@@ -70,7 +73,7 @@ services:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
     volumes:
-      - ./src:/var/www/html
+      - ./src/Emotion-Tracker:/var/www/html
     depends_on:
       - php
     entrypoint: [ 'composer', '--ignore-platform-reqs' ]
@@ -80,7 +83,7 @@ services:
   npm:
     image: node:current-alpine
     volumes:
-      - ./src:/var/www/html
+      - ./src/Emotion-Tracker:/var/www/html
     ports:
       - "3000:3000"
       - "3001:3001"
@@ -98,7 +101,7 @@ services:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
     volumes:
-      - ./src:/var/www/html:delegated
+      - ./src/Emotion-Tracker:/var/www/html:delegated
     depends_on:
       - mysql
     entrypoint: [ 'php', '/var/www/html/artisan' ]
